--- a/search-room.html
+++ b/search-room.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="./css/Home.css"> -->
-    <link rel="stylesheet" href="./css/Home.css">
+    <link rel="stylesheet" href="./css/search-room.css">
 </head>
 
 <body>
