--- a/search-room.html
+++ b/search-room.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="./css/Home.css"> -->
     <link rel="stylesheet" href="./css/search-room.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 
 <body>
