--- a/room-details.html
+++ b/room-details.html
@@ -11,20 +11,24 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/roomdetails.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-2">
-        <div class="container-fluid">
-            <a class="navbar-brand text-white fw-bold" href="#">GROUP 55</a>
-            <div class="ms-auto d-flex align-items-center">
-                <span class="text-white me-2"><i class="fas fa-bell"></i></span>
-                <img src="./assets/images/megaphone.png" alt="User Avatar" class="rounded-circle me-2">
-                <button class="btn btn-sm btn-danger py-1 px-3">Phan Si NhatNhat</button>
+    <div class="header">
+        <div class="container">
+            <a href="#" class="logo">
+                <img src="./imgs/homes/logo.svg" alt="logo">
+                <span>BookingRoms</span>
+            </a>
+            <div class="auth-buttons">
+                <button class="auth-button">Đăng Nhập</button>
+                <button class="auth-button">Tạo tài khoản</button>
             </div>
         </div>
-    </nav>
+    </div>
 
     <div class="container-fluid mt-3">
         <div class="row">
@@ -207,28 +211,34 @@
         </div>
     </div>
 
-    <footer class="bg-dark text-white py-4">
-        <div class="container-fluid">
-            <div class="row align-items-center px-4">
-                <div class="col-md-6 mb-3 mb-md-0">
-                    <p class="mb-1 fw-bold">BookingRooms</p>
-                    <small>Liên hệ với chúng tôi</small>
-                    <p class="mb-1"><small>Điện thoại: xxx xxx xxx</small></p>
-                </div>
-                <div class="col-md-3 mb-3 mb-md-0">
-                    <p class="mb-1 fw-bold">Liên kết</p>
-                    <small>Về chúng tôi</small>
-                    <p class="mb-1"><small>Điều khoản dịch vụ</small></p>
-                </div>
-                <div class="col-md-3 text-md-end">
-                    <p class="mb-2 fw-bold">Theo dõi chúng tôi</p>
-                    <a href="#" class="text-white me-2"><i class="fab fa-facebook-f fa-lg"></i></a>
-                    <a href="#" class="text-white me-2"><i class="fab fa-instagram fa-lg"></i></a>
-                    <a href="#" class="text-white"><i class="fab fa-twitter fa-lg"></i></a>
+    <div class="footer-section">
+        <div class="container">
+            <div class="footer-column">
+                <h3 class="footer-title">BookingRoms</h3>
+                <p class="footer-info">Email: <a href="#">support@bookingrooms.vn</a></p>
+                <p class="footer-info">Hotline: <a href="#">0123 456 789</a></p>
+            </div>
+            <div class="footer-column">
+                <h3 class="footer-title">Liên kết</h3>
+                <p class="footer-link"><a href="#">Về chúng tôi</a></p>
+                <p class="footer-link"><a href="#">Điều khoản dịch vụ</a></p>
+            </div>
+            <div class="footer-column">
+                <h3 class="footer-title">Theo dõi chúng tôi</h3>
+                <div class="footer-socials">
+                    <a href="#" class="footer-social-icon" aria-label="Facebook">
+                        <img src="./imgs/homes/facebook-icon.svg" alt="Facebook" />
+                    </a>
+                    <a href="#" class="footer-social-icon" aria-label="Instagram">
+                        <img src="./imgs/homes/instagram-icon.svg" alt="Instagram" />
+                    </a>
+                    <a href="#" class="footer-social-icon" aria-label="TikTok">
+                        <img src="./imgs/homes/tiktok-icon.svg" alt="TikTok" />
+                    </a>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcqpozjF+dTO457fLzQ+MABkFbxZ"
